--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-testing-library": "^5.0.0"
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.0"
   }
 }
